--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,70 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple HTML Page</title>
+    <style>
+        body {
+            background-image: url('/static/back3.jpg');
+            background-size: cover;
+            background-repeat: no-repeat;
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif; /* Optional: Specify the font family */
+        }
 
+        .content {
+            text-align: center;
+            padding: 50px;
+            color: white;
+        }
+
+        h1 {
+            font-weight: 900;
+            font-size: 50px;
+        }
+
+        h1 spam{
+
+            color:#FE5D35;
+        }
+
+        p {
+            font-size: 1.2em;
+        }
+
+        .button-container {
+            margin-top: 20px;
+        }
+
+        .redirect-button {
+            background-color: #FE5D35;
+            color: white;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            cursor: pointer;
+            margin: 10px 0px;
+        }
+        center{
+
+            margin:200px 100px 100px 100px;
+        }
+    </style>
+</head>
+<body>
+    <center>
+    <div class="content">
+        <h1>A Deep Learning-Based Experiment on <spam>Forest Wildfire Detection...! </spam> <br> Machine <spam>Vision </spam> Course...!</h1>
+        <p>Deep learning techniques to detect forest wildfires in the context of a machine vision course.<br> The study aims to leverage advanced image analysis algorithms to identify and classify<br> instances of wildfires within forest environments, demonstrating the practical application of<br> deep learning in the field of computer vision..</p>
+
+        <div class="button-container">
+            <a href="/main" class="redirect-button">Go to Next Page</a>
+        </div>
+    </div>
+</center>
+</body>
+</html>
